--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         dexOptions {
             preDexLibraries = false
         }
@@ -40,13 +40,13 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //noinspection GradleDynamicVersion,GradleCompatible
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
-    implementation 'com.android.support:design:28.+'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
@@ -67,11 +67,13 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'org.apache.commons:commons-lang3:3.4'
 
+
+    implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'com.koushikdutta.ion:ion:2.2.1'
     implementation files('libs/PGSDK_v1.0.jar')
     implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha3'
-    implementation 'com.android.support:cardview-v7:28.0.0-alpha3'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.shamanland:fonticon:0.1.8'
     implementation('com.nispok:snackbar:2.11.+') {
         // exclusion is not necessary, but generally a good idea.
@@ -85,8 +87,9 @@ dependencies {
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     //Facebook Login
     implementation 'com.facebook.android:facebook-login:5.15.3'
+    implementation 'com.google.android.gms:play-services-auth:12.0.1'
     implementation 'commons-codec:commons-codec:1.10'
-    implementation 'com.google.android.gms:play-services-appindexing:9.8.0'
+//    implementation 'com.google.android.gms:play-services-appindexing:9.8.0'
     implementation files('libs/httpmime-4.2.5-sources.jar')
 
 }
