--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.0'
     defaultConfig {
-        applicationId "com.gofreshuser.ers"
+        applicationId "com.ers.menumine"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 3
@@ -84,10 +84,13 @@ dependencies {
     implementation 'com.razorpay:checkout:1.5.2'
 
 
+
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     //Facebook Login
     implementation 'com.facebook.android:facebook-login:5.15.3'
-    implementation 'com.google.android.gms:play-services-auth:12.0.1'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
     implementation 'commons-codec:commons-codec:1.10'
 //    implementation 'com.google.android.gms:play-services-appindexing:9.8.0'
     implementation files('libs/httpmime-4.2.5-sources.jar')
