--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     //Facebook Login
     implementation 'com.facebook.android:facebook-login:5.15.3'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation 'com.facebook.shimmer:shimmer:0.1.0'
     implementation 'commons-codec:commons-codec:1.10'
 //    implementation 'com.google.android.gms:play-services-appindexing:9.8.0'
     implementation files('libs/httpmime-4.2.5-sources.jar')
