--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,12 +68,21 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.4'
 
 
-    implementation 'com.google.android.gms:play-services:12.0.1'
+    //noinspection UseOfBundledGooglePlayServices
+//    implementation 'com.google.android.gms:play-services:12.0.1'
+
+
     implementation 'com.koushikdutta.ion:ion:2.2.1'
     implementation files('libs/PGSDK_v1.0.jar')
     implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+
+    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+
     implementation 'com.shamanland:fonticon:0.1.8'
     implementation('com.nispok:snackbar:2.11.+') {
         // exclusion is not necessary, but generally a good idea.
