--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ allprojects {
         maven {
             url "https://maven.google.com" // Google's Maven repository
         }
-        jcenter()
         google()
-        maven { url "https://jitpack.io" }
+        jcenter()
+        maven { url "https://www.jitpack.io" }
     }
     }
 
