--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ThanksActivity"></activity>
         <activity
             android:name=".SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -50,9 +51,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".RegisterActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-
-        <!-- Firebase Notifications -->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- Firebase Notifications -->
         <service android:name="fcm.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -62,12 +61,10 @@
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
-        </service>
-        <!-- ./Firebase Notifications -->
+        </service> <!-- ./Firebase Notifications -->
         <meta-data
             android:name="com.razorpay.ApiKey"
-            android:value="rzp_live_ILgsfZCZoFIKMb"
-            />
+            android:value="rzp_live_ILgsfZCZoFIKMb" />
 
         <activity android:name=".SelectStore" />
         <activity android:name=".SelectCity" />
@@ -80,7 +77,9 @@
         <activity android:name=".My_Order_activity" />
         <activity android:name=".MyOrderDetail" />
         <activity android:name=".RechargeWallet" />
-        <meta-data android:name="android.support.multidex.MultiDexApplication"
+
+        <meta-data
+            android:name="android.support.multidex.MultiDexApplication"
             android:value="true" />
 
         <activity android:name=".ThanksOrder" />
@@ -93,25 +92,26 @@
         <activity android:name=".Paytm" />
         <activity android:name=".networkconnectivity.NoInternetConnection" />
 
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
     </application>
-
 
 </manifest>
