--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".networkconnectivity.RatingAndReviews"></activity>
+        <activity android:name=".RatingAndReviews"></activity>
         <activity android:name=".ProductActivity" />
         <activity android:name=".Rating" />
         <activity android:name=".WebView" />
