--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,10 @@ dependencies {
 
 
 
+//pinview
+    implementation 'com.chaos.view:pinview:1.4.3'
+
+
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
 
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
