--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@drawable/icon"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity android:name=".OTPActivity"></activity>
         <activity android:name=".RatingAndReviews" />
         <activity android:name=".ProductActivity" />
@@ -49,8 +50,7 @@
             android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="networkconnectivity.NetworkError"
-            tools:ignore="MissingClass" />
+        <activity android:name="networkconnectivity.NetworkError" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.NoActionBar" />
