--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'org.apache.commons:commons-lang3:3.4'
 
+//    Implementation 'com.google.android.libraries.places:2.2.0'
 
     //noinspection UseOfBundledGooglePlayServices
 //    implementation 'com.google.android.gms:play-services:12.0.1'
