--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
+        maven{url 'https://jitpack.io'}
+
         google()
     }
     dependencies {
@@ -22,6 +25,7 @@ allprojects {
         }
         google()
         jcenter()
+        mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url "https://www.jitpack.io" }
     }
