--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 
-
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 30
+    buildToolsVersion '30.0.0'
     defaultConfig {
         applicationId "com.ers.menumine"
         minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 3
-        versionName "1.2"
+        targetSdkVersion 30
+        versionCode 1
+        versionName "1.0"
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
@@ -48,16 +47,25 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+
+    //volley
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.0'
+
+    //picture
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    //retrofit
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation 'com.squareup.retrofit2:retrofit:2.2.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+
+    //firebase
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
@@ -65,7 +73,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     testImplementation 'junit:junit:4.12'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'org.apache.commons:commons-lang3:3.4'
 
 //    Implementation 'com.google.android.libraries.places:2.2.0'
@@ -73,7 +80,12 @@ dependencies {
     //noinspection UseOfBundledGooglePlayServices
 //    implementation 'com.google.android.gms:play-services:12.0.1'
 
+    //location
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.google.android.gms:play-services-plus:17.0.0'
 
+    //
     implementation 'com.koushikdutta.ion:ion:2.2.1'
     implementation files('libs/PGSDK_v1.0.jar')
     implementation 'com.github.franmontiel:LocaleChanger:0.9.2'
